@@ -395,6 +395,9 @@ Version 1.5.1 -- CVS
     functions are removed from SquirrelMail IMAP API. Use sqimap_msgs_*
     and sqimap_get_small_header_list() functions instead.
   - Fix for bad cache on massive expunge/delete/move operations.
+  - Moved time zone configuration from locale/timezones.cfg to php array.
+    Adds time zone name localization options and fixes problems on systems
+    that don't support GNU C time zone mappings.
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
